--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "seeds": "node seeds/index.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -24,7 +23,6 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.4",
-    "handlebars": "^4.7.7",
     "express-session": "^1.17.2",
     "mysql2": "^2.3.2",
     "sequelize": "^6.9.0"
