--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-handlebars": "^5.3.4",
     "express-session": "^1.17.2",
     "handlebars": "^4.7.7",
+    "handlebars-dateformat": "^1.1.1",
     "mysql2": "^2.3.2",
     "sequelize": "^6.9.0"
   }
